--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "keywords": [
         "babel",
         "hmr",
-        "react-bootstrap",
+        "material-ui",
         "react",
         "react-component",
         "redux",
@@ -20,7 +20,8 @@
         "webpack"
     ],
     "dependencies": {
-        "axios": "0.18.0",
+        "@material-ui/core": "^1.2.1",
+        "@material-ui/icons": "^1.1.0",
         "babel-cli": "6.26.0",
         "babel-core": "6.26.3",
         "babel-preset-env": "1.7.0",
@@ -28,11 +29,9 @@
         "babel-preset-stage-2": "6.24.1",
         "express": "4.16.3",
         "lodash": "4.17.10",
-        "parse-link-header": "1.0.1",
         "path": "0.12.7",
         "prop-types": "15.6.1",
         "react": "16.4.0",
-        "react-bootstrap": "0.32.1",
         "react-dom": "16.4.0",
         "react-hot-loader": "4.2.0",
         "react-redux": "5.0.7",
@@ -54,17 +53,13 @@
         "babel-polyfill": "6.26.0",
         "classnames": "2.2.5",
         "css-loader": "0.28.11",
-        "enzyme": "3.3.0",
-        "enzyme-adapter-react-16": "1.1.1",
         "eslint": "4.19.1",
         "eslint-loader": "2.0.0",
         "eslint-plugin-react": "7.8.2",
-        "expect": "23.1.0",
         "extract-text-webpack-plugin": "4.0.0-beta.0",
         "file-loader": "1.1.11",
         "html-webpack-plugin": "3.2.0",
         "image-webpack-loader": "4.3.0",
-        "jest": "23.1.0",
         "json-loader": "0.5.7",
         "node-sass": "4.9.0",
         "postcss-import": "11.1.0",
@@ -80,7 +75,6 @@
         "dev": "webpack-dev-server --config configs/webpack/dev --progress",
         "build": "webpack --config=configs/webpack/prod.js",
         "start": "npm run dev",
-        "eslint": "eslint -c .eslintrc.js -f junit src -o ./eslint.xml --no-color; exit 0",
-        "test": "jest"
+        "eslint": "eslint -c .eslintrc.js -f junit src -o ./eslint.xml --no-color; exit 0"
     }
 }
