--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
         "stage-2"
     ],
     "plugins": [
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        "transform-function-bind"
     ],
     "env": {
         "test": {
