--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "babel-preset-react": "6.24.1",
         "babel-preset-stage-2": "6.24.1",
         "express": "4.16.3",
+        "google-map-react": "^1.0.4",
         "lodash": "4.17.10",
         "path": "0.12.7",
         "prop-types": "15.6.1",
@@ -40,6 +41,7 @@
         "redux-thunk": "2.3.0",
         "reqwest": "2.0.5",
         "uglifyjs-webpack-plugin": "1.2.5",
+        "uuid": "^3.2.1",
         "webpack": "4.10.2",
         "webpack-command": "0.2.0",
         "webpack-dev-middleware": "3.1.3",
@@ -50,6 +52,7 @@
         "babel-eslint": "8.2.3",
         "babel-jest": "23.0.1",
         "babel-loader": "7.1.4",
+        "babel-plugin-transform-function-bind": "^6.22.0",
         "babel-polyfill": "6.26.0",
         "classnames": "2.2.5",
         "css-loader": "0.28.11",
