--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-preset-stage-2": "6.24.1",
         "express": "4.16.3",
         "google-map-react": "^1.0.4",
+        "jquery": "^3.3.1",
         "lodash": "4.17.10",
         "path": "0.12.7",
         "prop-types": "15.6.1",
