--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-hot-loader": "4.2.0",
         "react-redux": "5.0.7",
         "react-router-dom": "4.2.2",
+        "react-router-hash-link": "^1.2.0",
         "redux": "4.0.0",
         "redux-thunk": "2.3.0",
         "reqwest": "2.0.5",
