--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
         "prop-types": "15.6.1",
         "react": "16.4.0",
         "react-dom": "16.4.0",
+        "react-google-maps": "^9.4.5",
         "react-hot-loader": "4.2.0",
         "react-redux": "5.0.7",
         "react-router-dom": "4.2.2",
         "react-router-hash-link": "^1.2.0",
+        "recompose": "^0.28.2",
         "redux": "4.0.0",
         "redux-thunk": "2.3.0",
         "reqwest": "2.0.5",
